<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.yordanov.gamesquiz.MainActivity">


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="24dp"
        card_view:cardCornerRadius="16dp"

        card_view:cardElevation="16dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/backgroundpicture">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/question_tittle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tittle_question_one" />

                <TextView
                    style="@style/questionAndAnswers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_one" />

                <EditText
                    android:id="@+id/question_one_answer"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/question_one_hint"
                    android:inputType="number"
                    android:maxLength="10" />

                <TextView
                    style="@style/question_tittle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tittle_question_two" />

                <TextView
                    style="@style/questionAndAnswers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_two" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/chk_one_quest_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quest_two_opt_one" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/chk_two_quest_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quest_two_opt_two" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/chk_three_quest_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quest_two_opt_three" />
                </LinearLayout>

                <TextView
                    style="@style/question_tittle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tittle_question_three" />

                <TextView
                    style="@style/questionAndAnswers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_three" />

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_one_quest_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quest_three_opt_two" />

                    <RadioButton
                        android:id="@+id/radio_two_quest_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quest_three_opt_one" />

                    <RadioButton
                        android:id="@+id/radio_three_quest_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quest_three_opt_three" />
                </RadioGroup>

                <TextView
                    style="@style/question_tittle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tittle_question_four" />

                <TextView
                    style="@style/questionAndAnswers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_four" />

                <EditText
                    android:id="@+id/answer_input_question_four"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hit_question_four"
                    android:inputType="text"
                    android:maxLength="15" />


                <TextView
                    style="@style/question_tittle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tittle_question_five" />

                <TextView
                    style="@style/questionAndAnswers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_five" />

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_one_quest_five"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quest_five_opt_one" />

                    <RadioButton
                        android:id="@+id/radio_two_quest_five"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quest_five_opt_two" />

                    <RadioButton
                        android:id="@+id/radio_three_quest_five"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quest_five_opt_three" />
                </RadioGroup>


                <TextView
                    style="@style/question_tittle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tittle_question_six" />

                <TextView
                    style="@style/questionAndAnswers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_six" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/chk_one_quest_six"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quest_six_opt_one" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/chk_two_quest_six"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quest_six_opt_two" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/chk_three_quest_six"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quest_six_opt_three" />
                </LinearLayout>

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/submit" />
            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>

</RelativeLayout>
